<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D4F1F4"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Btn_GpsMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:fontFamily="monospace"
        android:onClick="GPS_Map"
        android:text="@string/gps_map"
        android:textColor="@color/white"
        app:backgroundTint="#05445E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn_CamGal" />

    <Button
        android:id="@+id/Btn_CamGal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:fontFamily="monospace"
        android:onClick="Cam_Gallery"
        android:text="@string/cam_gallery"
        android:textColor="@color/white"
        app:backgroundTint="#05445E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_MainTitle" />

    <TextView
        android:id="@+id/TV_MainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:ellipsize="none"
        android:fontFamily="monospace"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:text="@string/main_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>